k8s/rolling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-rolling
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest
  template:
    metadata:
      labels:
        app: aceest
    spec:
      containers:
      - name: aceest-container
        image: srividya1008/aceestfitness:latest
        ports:
        - containerPort: 5000
