k8s/canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-stable
  namespace: aceest
  labels:
    app: aceest-fitness
    track: stable
spec:
  replicas: 4
  selector:
    matchLabels:
      app: aceest-fitness
      track: stable
  template:
    metadata:
      labels:
        app: aceest-fitness
        track: stable
    spec:
      containers:
        - name: aceest-app
          image: <YOUR_DOCKERHUB_USERNAME>/aceest-fitness:v1.0.0
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-canary
  namespace: aceest
  labels:
    app: aceest-fitness
    track: canary
spec:
  replicas: 1   
  selector:
    matchLabels:
      app: aceest-fitness
      track: canary
  template:
    metadata:
      labels:
        app: aceest-fitness
        track: canary
    spec:
      containers:
        - name: aceest-app
          image: <YOUR_DOCKERHUB_USERNAME>/aceest-fitness:v1.1.0   
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-canary-service
  namespace: aceest
spec:
  selector:
    app: aceest-fitness    
  ports:
    - port: 80
      targetPort: 5000
  type: LoadBalancer
