k8s/service-namespace.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-service
spec:
  type: NodePort
  selector:
    app: aceest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30007
--
apiVersion: v1
kind: Namespace
metadata:
  name: aceest
  labels:
    app: aceest-fitness
    environment: production
